--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.7.3</version>
@@ -49,12 +53,6 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.32</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.servlet</groupId>
-			<artifactId>jakarta.servlet-api</artifactId>
-			<version>6.1.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -117,7 +115,7 @@
 							<goal>generate</goal>
 						</goals>
 						<configuration>
-							<inputSpec>https://gitlab.com/microarch-ru/microservices/dotnet/system-design/-/raw/main/services/delivery/contracts/openapi.yml</inputSpec>
+							<inputSpec>${project.basedir}/src/main/resources/contract/openapi.yml</inputSpec>
 							<generatorName>spring</generatorName>
 							<output>.</output>
 							<apiPackage>app.delivery.api.adapters.contract.openapi.api</apiPackage>
@@ -126,7 +124,11 @@
 								<useSpringBoot3>true</useSpringBoot3>
 								<classModifier>abstract</classModifier>
 								<operationResultTask>true</operationResultTask>
-								<delegatePattern>true</delegatePattern>
+								<useTags>true</useTags>
+								<serviceInterface>true</serviceInterface>
+								<interfaceOnly>true</interfaceOnly>
+								<serviceImplementation>false</serviceImplementation>
+								<skipDefaultInterface>true</skipDefaultInterface>
 							</configOptions>
 							<supportingFilesToGenerate>
 								ApiUtil.java
