module-6: exclude gen date

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,8 @@
 								<interfaceOnly>true</interfaceOnly>
 								<serviceImplementation>false</serviceImplementation>
 								<skipDefaultInterface>true</skipDefaultInterface>
+								<excludeGeneratedDate>true</excludeGeneratedDate>
+								<hideGenerationTimestamp>true</hideGenerationTimestamp>
 							</configOptions>
 							<supportingFilesToGenerate>
 								ApiUtil.java
