--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Microservice Delivery</description>
     <properties>
         <java.version>21</java.version>
-        <protoc.version>4.27.1</protoc.version>
+        <protoc.version>4.27.2</protoc.version>
         <grpc.version>1.65.1</grpc.version>
     </properties>
     <dependencies>
@@ -194,7 +194,7 @@
                     <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
                     <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
-                    <protoSourceRoot>src/main/java/app/delivery/infrastructure/grpc</protoSourceRoot>
+                    <protoSourceRoot>src/main/java/app/delivery/infrastructure/grpc/proto</protoSourceRoot>
                     <outputDirectory>src/main/java</outputDirectory>
                     <!--To avoid remove all from src/main/java-->
                     <clearOutputDirectory>false</clearOutputDirectory>
@@ -207,6 +207,30 @@
                             <goal>compile</goal>
                             <goal>compile-custom</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- maven-resources-plugin to copy/move generated files -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>copy-protobuf-generated-sources</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>src/main/java/app/delivery/infrastructure/grpc/geo/gen</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>target/generated-sources/protobuf/java</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
