--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 delivery.geo.ip=localhost
 delivery.geo.port=5004
+
+delivery.kafka.server=localhost:9092
+delivery.kafka.basket.confirmed.topic=basket.confirmed
+delivery.kafka.order.status.changed.topic=order.status.changed
